Alteração das cores
alterações: background-color do .criar, .criar:hover, .login, .login, .login:hover, .alternativa a

--- a/telaPrincipal/telaPrincipal.html
+++ b/telaPrincipal/telaPrincipal.html
@@ -48,11 +48,12 @@
             <span class="vermais">Ver mais...</span>
           </div>
         </div>
+        
       </div>
 
       <!-- Sair da conta -->
       <footer>
-        <button class="logout-btn" onclick="logout()">Logout</button>
+        <button class="logout-btn" onclick="logout()">Sair</button>
       </footer>
     </aside>
 
