Adição de pop-up para anotação e botão flutuante em caderno para nova anotação

--- a/telaPrincipal/telaPrincipal.html
+++ b/telaPrincipal/telaPrincipal.html
@@ -106,7 +106,23 @@
       </section>
     </div>
 
-    
+    <!-- Pop-up criar anotação -->
+    <div class="form-container">
+      <section class="form-box">
+
+        <input type="text" class="nomeAnotacao" name="nomeAnotacao" placeholder="Nome da anotação" required />
+            
+          <div class="buttons2">
+              <button type="submit" class="criar">Criar</button>
+          </div>
+
+          <div class="buttons2">
+              <button type="submit" class="cancelar">Cancelar</button>
+          </div>
+
+      </section>
+    </div>
+
   </div>
 </body>
 </html>
