--- a/caderno/caderno.html
+++ b/caderno/caderno.html
@@ -75,22 +75,8 @@
         <h1>Nome do caderno</h1>
     </main>
 
-    
-    <div class="buttons1">
-      <!-- Botão Menu -->
-      <button class="menu-toggle"> ☰ </button>
-
-      <!-- Menu abre e fecha -->
-      <div class="menutoggle" >
-          <ul>
-            <li><a href="#">Editar</a></li>
-            <li><a href="#">Excluir</a></li>
-          </ul>
-      </div>
-    </div>
-
     <!-- Pop-up criar caderno -->
-    <div class="form-container">
+    <div class="form-containerC">
         <section class="form-box">
 
             <input type="text" class="nomeCaderno" name="nomeCaderno" placeholder="Nome do caderno" required />
@@ -110,7 +96,7 @@
     <button class="floating-button" id="openNotePopup">+</button>
 
     <!-- Pop-up criar anotação -->
-    <div class="form-container">
+    <div class="form-containerA">
       <section class="form-box">
 
         <input type="text" class="nomeAnotacao" name="nomeAnotacao" placeholder="Nome da anotação" required />
@@ -125,6 +111,9 @@
 
       </section>
     </div>
+
+    <!-- ADICIONAR BOTÃO DE EDITAR -> POPUP DE EDIÇÃO COM BOTÃO DE SALVAR -->
+    <!-- ADICIONAR TAGS NOS MENUS E NO POPUP DE CRIAR CADERNO E CRIAR ANOTAÇÃO -> PASSAR MUDANÇAS PRO ARQUIVO DE ANOTAÇÕES --> 
 
   </div>
 </body>
