Alteração do layout

--- a/anotacao/anotacao.html
+++ b/anotacao/anotacao.html
@@ -71,6 +71,11 @@
     <!-- Parte principal -->
     <main class="main-content">
         <h1>Nome da anotação</h1>
+        <button class="buttonEditar">Editar</button>
+        <button class="buttonSalvar">Salvar</button>
+        <div class="textoAnotacoes">
+          <!-- TEXTO DAS ANOTAÇÕES AQUI -->
+        </div>
     </main>
 
     <!-- Pop-up criar caderno -->
@@ -106,8 +111,7 @@
 
       </section>
     </div>
-
-    <!-- ADICIONAR BOTÃO EDITAR, SALVAR, EXCLUIR-->
+    
   </div>
 </body>
 </html>
