--- a/caderno/caderno.html
+++ b/caderno/caderno.html
@@ -73,6 +73,7 @@
     <!-- Parte principal -->
     <main class="main-content">
         <h1>Nome do caderno</h1>
+        <button class="buttonEditar">Editar</button>
     </main>
 
     <!-- Pop-up criar caderno -->
@@ -98,21 +99,60 @@
     <!-- Pop-up criar anotação -->
     <div class="form-containerA">
       <section class="form-box">
-
         <input type="text" class="nomeAnotacao" name="nomeAnotacao" placeholder="Nome da anotação" required />
+
+        <!-- botão para adicionar tag -->
+        <div class="tag-area">
+          <button type="button" class="add-tag-btn" id="openTagBox">+ Tag</button>
+
+          <!-- caixa para selecionar tag  -->
+          <div class="tag-box hidden" id="tagBox">
+            <p><strong>Criar tag</strong></p>
+            <ul id="existingTags">
+              <!-- lista de tags existentes -->
+            </ul>
+          </div>
+
+          <!-- caixa para criar nova tag -->
+          <div class="tag-creator hidden" id="tagCreator">
+            <p><strong>Nome da tag</strong></p>
+            <input type="text" id="tagName" placeholder="Nome da tag" />
             
-          <div class="buttons2">
-              <button type="submit" class="criar">Criar</button>
-          </div>
+            <div class="color-palette" id="colorPalette">
+              <!-- bolinhas de cores supostamente gerado pelo back -->
+            </div>
 
-          <div class="buttons2">
-              <button type="submit" class="cancelar">Cancelar</button>
+            <button type="button" id="saveTag" class="check-btn">✔</button>
           </div>
+        </div>
 
+        <!-- Botões -->
+        <div class="buttons2">
+          <button type="submit" class="criar">Criar</button>
+          <button type="button" class="cancelar" id="cancelNote">Cancelar</button>
+        </div>
       </section>
+
     </div>
 
-    <!-- ADICIONAR BOTÃO DE EDITAR -> POPUP DE EDIÇÃO COM BOTÃO DE SALVAR -->
+    <!-- ADICIONAR SISTEMA DE TAGS -->
+    <!-- Pop-up de editar caderno -->
+    <div class="form-containerC">
+        <section class="form-box">
+
+            <input type="text" class="nomeCaderno" name="nomeCaderno" placeholder="Nome do caderno" required />
+            
+            <div class="buttons2">
+                <button type="submit" class="salvar">Salvar</button>
+            </div>
+
+            <div class="buttons2">
+                <button type="submit" class="cancelar">Cancelar</button>
+            </div>
+
+        </section>
+    </div>
+
     <!-- ADICIONAR TAGS NOS MENUS E NO POPUP DE CRIAR CADERNO E CRIAR ANOTAÇÃO -> PASSAR MUDANÇAS PRO ARQUIVO DE ANOTAÇÕES --> 
 
   </div>
