--- a/telaPrincipal/telaPrincipal.html
+++ b/telaPrincipal/telaPrincipal.html
@@ -75,22 +75,8 @@
       <h1 class="logo">ANote<span class="plus">+</span></h1>
     </main>
 
-
-    <div class="buttons1">
-      <!-- Botão Menu -->
-      <button class="menu-toggle"> ☰ </button>
-
-      <!-- Menu abre e fecha -->
-      <div class="menutoggle" >
-          <ul>
-            <li><a href="#">Editar</a></li>
-            <li><a href="#">Excluir</a></li>
-          </ul>
-      </div>
-    </div>
-
     <!-- Pop-up criar caderno -->
-    <div class="form-container">
+    <div class="form-containerC">
       <section class="form-box">
 
         <input type="text" class="nomeCaderno" name="nomeCaderno" placeholder="Nome do caderno" required />
@@ -107,7 +93,7 @@
     </div>
 
     <!-- Pop-up criar anotação -->
-    <div class="form-container">
+    <div class="form-containerA">
       <section class="form-box">
 
         <input type="text" class="nomeAnotacao" name="nomeAnotacao" placeholder="Nome da anotação" required />
