--- a/caderno/caderno.html
+++ b/caderno/caderno.html
@@ -115,8 +115,8 @@
 
           <!-- caixa para criar nova tag -->
           <div class="tag-creator hidden" id="tagCreator">
-            <p><strong>Nome da tag</strong></p>
-            <input type="text" id="tagName" placeholder="Nome da tag" />
+            <p><strong>Nova tag</strong></p>
+            <input type="text" id="tagName" placeholder="Ex.: importante" />
             
             <div class="color-palette" id="colorPalette">
               <!-- bolinhas de cores supostamente gerado pelo back -->
