--- a/formularios/cadastro.html
+++ b/formularios/cadastro.html
@@ -1,50 +1,87 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cadastro - ANote</title>
-  <link rel="stylesheet" href="formularios.css" />
-</head>
-<body>
-  <main class="form-container">
-    <section class="form-box">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cadastro - ANote</title>
+    <link rel="stylesheet" href="formularios.css" />
+  </head>
+  <body>
+    <main class="form-container">
+      <section class="form-box">
+        <h2>Cadastro</h2>
+        <form>
+          <!-- Inserir bem vindo -->
+          <p class="bemvindo">
+            <em>Bem-vindo ao ANote!</em>
+          </p>
 
-      <h2>Cadastro</h2>
-      <form>
+          <!-- Inserir nome -->
+          <label for="nome">Nome</label>
+          <input type="text" id="nome" name="nome" required />
 
-        <!-- Inserir bem vindo -->
-        <p class="bemvindo">
-          <em>Bem-vindo ao ANote!</em></p>
+          <!-- Inserir email -->
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required />
 
-         <!-- Inserir nome -->
-        <label for="nome">Nome</label>
-        <input type="text" id="nome" name="nome" required />
+          <!-- Inserir senha -->
+          <label for="senha">Senha</label>
+          <input type="password" id="senha" name="senha" required />
 
-         <!-- Inserir email -->
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required />
+          <!-- Inserir confirmar senha -->
+          <label for="confirmar">Confirmar Senha</label>
+          <input type="password" id="confirmar" name="confirmar" required />
 
-         <!-- Inserir senha -->
-        <label for="senha">Senha</label>
-        <input type="password" id="senha" name="senha" required />
+          <!-- Botão Cadastrar -->
+          <div class="buttons">
+            <button type="submit" class="criar">Cadastrar</button>
+          </div>
+        </form>
 
-         <!-- Inserir confirmar senha -->
-        <label for="confirmar">Confirmar Senha</label>
-        <input type="password" id="confirmar" name="confirmar" required />
+        <!-- Caminho para arquivo login -->
+        <p class="alternativa">
+          Já tem conta? <a href="login.html">Fazer login</a>
+        </p>
+      </section>
+    </main>
+  </body>
+  <script>
+    document
+      .querySelector("form")
+      .addEventListener("submit", async function (e) {
+        e.preventDefault();
 
-         <!-- Botão Cadastrar -->
-        <div class="buttons">
-          <button type="submit" class="criar">Cadastrar</button>
-        </div>
-      </form>
+        const nome = document.getElementById("nome").value;
+        const email = document.getElementById("email").value;
+        const senha = document.getElementById("senha").value;
 
-      <!-- Caminho para arquivo login -->
-      <p class="alternativa">
-        Já tem conta? <a href="login.html">Fazer login</a>
-      </p>
+        try {
+          const response = await fetch("http://localhost:8080/usuarios", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ nome, email, senha }),
+          });
 
-    </section>
-  </main>
-</body>
+          if (!response.ok) {
+            if (response.status === 401) {
+              alert("Email ou senha inválidos.");
+            } else {
+              console.log(response);
+              alert("Erro do servidor: " + response.status);
+            }
+            return;
+          }
+
+          const usuario = await response.json();
+          alert("Cadastro bem-sucedido! Bem-vindo, " + usuario.nome);
+          // Ex: armazenar no localStorage ou redirecionar
+          localStorage.setItem("usuario", JSON.stringify(usuario));
+          window.location.href = "../telaPrincipal/telaPrincipal.html";
+        } catch (err) {
+          alert(err.message);
+        }
+      });
+  </script>
 </html>
