--- a/telaPrincipal/telaPrincipal.html
+++ b/telaPrincipal/telaPrincipal.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ANote - Página Inicial</title>
     <link rel="stylesheet" href="telaPrincipal.css" />
+    <script src="index.js"></script>
   </head>
   <body>
     <div class="container">
@@ -23,12 +24,14 @@
         <div class="menu">
           <!-- Anotações -->
           <div class="section">
-            <span class="title">> Anotações</span>
+            <span class="title" onclick="noHiddenAnotacao()">> Anotações</span>
             <!-- Menu abre e fecha -->
-            <div class="submenu hidden">
-              <button class="action">+ Criar anotação</button>
+            <div id="anotacaoHidden" class="submenu hidden">
+              <button class="action" onclick="toggleAnotacao(null)">
+                + Criar anotação
+              </button>
               <!-- Lista das anotações -->
-              <ul class="incompleto">
+              <ul id="listaAnotacao" class="incompleto">
                 <!-- ANOTAÇÕES INICIAIS DEVEM APARECER AQUI -->
                 <span class="completo">
                   <ul>
@@ -36,18 +39,19 @@
                   </ul>
                 </span>
               </ul>
-              <button class="vermais">Ver mais...</button>
             </div>
           </div>
 
           <!-- Cadernos -->
           <div class="section">
-            <span class="title">> Cadernos</span>
+            <span class="title" onclick="noHiddenCaderno()">> Cadernos</span>
             <!-- Menu abre e fecha -->
-            <div class="submenu hidden">
-              <button class="action">+ Criar caderno</button>
+            <div id="cadernoHidden" class="submenu hidden">
+              <button class="action" onclick="toggleCaderno()">
+                + Criar caderno
+              </button>
               <!-- Lista dos cadernos -->
-              <ul class="incompleto">
+              <ul id="listaCaderno" class="incompleto">
                 <!-- CADERNOS INICIAIS DEVEM APARECER AQUI -->
                 <span class="completo">
                   <ul>
@@ -55,7 +59,6 @@
                   </ul>
                 </span>
               </ul>
-              <button class="vermais">Ver mais...</button>
             </div>
           </div>
         </div>
@@ -67,15 +70,16 @@
       </aside>
 
       <!-- Parte principal -->
-      <main class="main-content">
+      <main id="conteudoPrincipal" class="main-content">
         <h1 class="logo">ANote<span class="plus">+</span></h1>
       </main>
 
       <!-- Pop-up criar caderno -->
-      <div class="form-containerC">
+      <div id="criarCaderno" class="form-containerC hidden">
         <section class="form-box">
           <input
             type="text"
+            id="tituloCaderno"
             class="nomeCaderno"
             name="nomeCaderno"
             placeholder="Nome do caderno"
@@ -83,20 +87,85 @@
           />
 
           <div class="buttons2">
-            <button type="submit" class="criar">Criar</button>
+            <button
+              type="submit"
+              id="btnSalvarCaderno"
+              class="criar"
+              onclick="criarCaderno()"
+            >
+              Criar
+            </button>
           </div>
 
           <div class="buttons2">
-            <button type="submit" class="cancelar">Cancelar</button>
+            <button type="submit" class="cancelar" onclick="toggleCaderno()">
+              Cancelar
+            </button>
+          </div>
+        </section>
+      </div>
+
+      <!-- Pop-up editar caderno -->
+      <div id="editarCaderno" class="form-containerC hidden">
+        <section class="form-box">
+          <input
+            type="text"
+            id="tituloCadernoEditar"
+            class="nomeCaderno"
+            name="nomeCaderno"
+            placeholder="Nome do caderno"
+            required
+          />
+
+          <div class="buttons2">
+            <button type="submit" id="btnEditarCaderno" class="criar">
+              Salvar
+            </button>
+          </div>
+
+          <div class="buttons2">
+            <button type="submit" class="cancelar" onclick="toggleCaderno()">
+              Cancelar
+            </button>
           </div>
         </section>
       </div>
 
       <!-- Pop-up criar anotação -->
-      <div class="form-containerA">
+      <div id="criarAnotacao" class="form-containerA hidden">
         <section class="form-box">
           <input
             type="text"
+            id="tituloAnotacao"
+            class="nomeAnotacao"
+            name="nomeAnotacao"
+            placeholder="Nome da anotação"
+            required
+          />
+
+          <!-- Botões -->
+          <div class="buttons2">
+            <button type="submit" id="btnSalvarAnotacao" class="criar">
+              Criar
+            </button>
+            <button
+              type="button"
+              class="cancelar"
+              id="cancelNote"
+              onclick="toggleAnotacao()"
+            >
+              Cancelar
+            </button>
+          </div>
+        </section>
+      </div>
+
+      <!-- Pop-up editar anotação -->
+      <div id="editarAnotacao" class="form-containerA hidden">
+        <section class="form-box">
+          <input
+            type="text"
+            id="tituloAnotacaoEditar"
             class="nomeAnotacao"
             name="nomeAnotacao"
             placeholder="Nome da anotação"
@@ -111,7 +180,7 @@
 
             <!-- caixa para selecionar tag  -->
             <div class="tag-box hidden" id="tagBox">
-              <p><strong>Criar tag</strong></p>
+              <p><strong onclick="toggleCriarTag()">+ Criar tag</strong></p>
               <ul id="existingTags">
                 <!-- lista de tags existentes -->
               </ul>
@@ -132,8 +201,14 @@
 
           <!-- Botões -->
           <div class="buttons2">
-            <button type="submit" class="criar">Criar</button>
-            <button type="button" class="cancelar" id="cancelNote">
+            <button type="submit" id="btnEditarAnotacao" class="criar">
+              salvar
+            </button>
+            <button
+              type="button"
+              class="cancelar"
+              onclick="noHiddenEditarAnotacao()"
+            >
               Cancelar
             </button>
           </div>
